--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header id="header">
         <section id="content">
-            <img id="logo" src="logo.svg" alt="Company logo.">
+            <img id="logo" src="SVGs/logo.svg" alt="Company logo.">
             <div id="nav-links">
                 <a class="nav-link" href="#about">about.</a>
                 <a class="nav-link" href="#testimonials">testes.</a>
@@ -19,7 +19,7 @@
             </div>
         </section>
     </header>
-    <img id="main-image" src="main-image.svg" alt="Image of a SFFPC.">
+    <img id="main-image" src="SVGs/main-image.svg" alt="Image of a SFFPC.">
     <main>
         <section id="about">
             <h2 class="heading">about</h2>
@@ -31,33 +31,171 @@
         </section>
         <section id="testimonials">
             <h2 class="heading">testimonials</h2>
-            <div class="testimonials-grid">
-                <div class="body profile" id="jade">
+            <div id="testimonials-grid">
+                <div class="body" id="jade">
                     <div class="profile-banner">
-                        <img class="profile-icon" src="avatar.svg" alt="Avatar icon.">
+                        <img class="profile-icon" src="SVGs/avatar.svg" alt="Avatar icon.">
                         <h3 class="profile-heading">Jade</h3>
                     </div>
                     <p>As a new-comer to PC gaming, I bought an Aqua and couldn’t be happier. Alex was transparent and was quick to ship!</p>
                     <div class="divider"></div>
                 </div>
-                <div class="body profile" id="damon">
+                <div class="body" id="damon">
                     <div class="profile-banner">
-                        <img class="profile-icon" src="avatar.svg" alt="Avatar icon.">
+                        <img class="profile-icon" src="SVGs/avatar.svg" alt="Avatar icon.">
                         <h3 class="profile-heading">Damon</h3>
                     </div>
                     <p>My Veleno is such a beast! Runs any game I throw at it smoothly and quietly. Cable management is super clean too.</p>
                     <div class="divider"></div>
                 </div>
-                <div class="body profile" id="ron">
+                <div class="body" id="ron">
                     <div class="profile-banner">
-                        <img class="profile-icon" src="avatar.svg" alt="Avatar icon.">
+                        <img class="profile-icon" src="SVGs/avatar.svg" alt="Avatar icon.">
                         <h3 class="profile-heading">Ron</h3>
                     </div>
                     <p>What a great buy! I could tell from the moment I placed my order that Alex has a passion for building these computers.</p>
                     <div class="divider"></div>
                 </div>
+                <div class="body" id="jeof">
+                    <div class="profile-banner">
+                        <img class="profile-icon" src="SVGs/avatar.svg" alt="Avatar icon.">
+                        <h3 class="profile-heading">Jeof</h3>
+                    </div>
+                    <p>It's impressive how much power you fan fit inside such a tiny box! My PC arrived with no damages and the build is clean!</p>
+                    <div class="divider"></div>
+                </div>
+            </div>
+        </section>
+        <section id="buy">
+            <h2 class="heading">buy yours</h2>
+            <div id="buy-grid">
+                <div class="body" id="aqua">
+                    <h3 class="buy-grid-heading">Aqua</h3>
+                    <h3 class="buy-grid-subheading">Tier 4 - $600+</h3>
+                    <img class="buy-icons" src="SVGs/aqua-img.svg" alt="Aqua PC icon.">
+                    <div class="specs">
+                        <h3 class="specs-heading">Specs.</h3>
+                        <div class="specs-body">
+                            <div class="specs-line">
+                                <span class="spec-heading">CPU:</span>
+                                <p>Intel Core i3-13100F</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">RAM:</span>
+                                <p>16GB DDR4</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">Storage:</span>
+                                <p>500 GB NVME SSD</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">GPU:</span>
+                                <p>Radeon RX 6600 8GB</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="configure">Configure</button>
+                    <div class="divider"></div>
+                </div>
+                <div class="body" id="terra">
+                    <h3 class="buy-grid-heading">Terra</h3>
+                    <h3 class="buy-grid-subheading">Tier 3 - $900+</h3>
+                    <img class="buy-icons" src="SVGs/terra-img.svg" alt="Terra PC icon.">
+                    <div class="specs">
+                        <h3 class="specs-heading">Specs.</h3>
+                        <div class="specs-body">
+                            <div class="specs-line">
+                                <span class="spec-heading">CPU:</span>
+                                <p>AMD Ryzen 5 5600X</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">RAM:</span>
+                                <p>16GB DDR4</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">Storage:</span>
+                                <p>1 TB NVME SSD</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">GPU:</span>
+                                <p>Radeon RX 6700 XT 12GB</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="configure">Configure</button>
+                    <div class="divider"></div>
+                </div>
+                <div class="body" id="fuoco">
+                    <h3 class="buy-grid-heading">Fuoco</h3>
+                    <h3 class="buy-grid-subheading">Tier 2 - $1,600+</h3>
+                    <img class="buy-icons" src="SVGs/fuoco-img.svg" alt="Fuoco PC icon.">
+                    <div class="specs">
+                        <h3 class="specs-heading">Specs.</h3>
+                        <div class="specs-body">
+                            <div class="specs-line">
+                                <span class="spec-heading">CPU:</span>
+                                <p>AMD Ryzen 7 3800X3D</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">RAM:</span>
+                                <p>32GB DDR4</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">Storage:</span>
+                                <p>2 TB NVME SSD</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">GPU:</span>
+                                <p>Radeon RX 7900 XT 20GB</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="configure">Configure</button>
+                    <div class="divider"></div>
+                </div>
+                <div class="body" id="glassia">
+                    <h3 class="buy-grid-heading">Glassia</h3>
+                    <h3 class="buy-grid-subheading">Tier 1 - $2,000+</h3>
+                    <img class="buy-icons" src="SVGs/glassia-img.svg" alt="Glassia PC icon.">
+                    <div class="specs">
+                        <h3 class="specs-heading">Specs.</h3>
+                        <div class="specs-body">
+                            <div class="specs-line">
+                                <span class="spec-heading">CPU:</span>
+                                <p>Intel Core i7-13700K</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">RAM:</span>
+                                <p>32GB DDR4</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">Storage:</span>
+                                <p>2 TB NVME SSD</p>
+                            </div>
+                            <div class="specs-line">
+                                <span class="spec-heading">GPU:</span>
+                                <p>GeForce RTX 4070 Ti 12GB</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="configure">Configure</button>
+                    <div class="divider"></div>
+                </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div id="footer">
+            <div id="footer-left">
+                <h3>Quick Links:</h3>
+                <div id="footer-links">
+                    <a href="#about">about.</a>
+                    <a href="#testimonials">testes.</a>
+                    <a href="#buy">buy.</a>
+                </div>
+            </div>
+            <img id="footer-logo" src="SVGs/logo.svg" alt="SFFPC BLDR. logo.">
+        </div>
+    </footer>
 </body>
 </html>
