--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
         <!-- About (START) -->
         <section id="about">
             <h2 class="heading">about</h2>
-            <div class="body" id="about-body">
-                <p>Hello! I’m Alex - an enthusiast that builds small-form-factor gaming PCs. I see these little machines as the future of PC gaming, as not only are they as powerful as regular-sized gaming PCs, but they’re also small enough to take them wherever you go.</p>
-                <p>Though it is a greater challenge to build these tiny beasts, I have the experience to build your next SFFPC exactly how you envision it.</p>
-                <div class="divider"></div>
+            <div id="about-grid">
+                <div class="body" id="about-body">
+                    <p>Hello! I’m Alex - an enthusiast that builds small-form-factor gaming PCs. I see these little machines as the future of PC gaming, as not only are they as powerful as regular-sized gaming PCs, but they’re also small enough to take them wherever you go.</p>
+                    <p>Though it is a greater challenge to build these tiny beasts, I have the experience to build your next SFFPC exactly how you envision it.</p>
+                    <div class="divider"></div>
+                </div>
             </div>
         </section>
         <!-- About (END) -->
@@ -197,6 +199,11 @@
             </div>
         </section>
         <!-- Buy Yours (END) -->
+        <div id="disclaimer-grid">
+            <div id="disclaimer-body">
+                <p>As these machines are built-to-order, expect at least two weeks between the moment you place your order to the moment it shows up at your front door.</p>
+            </div>
+        </div>
     </main>
 
     <!-- Footer (START) -->
