--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <section id="content">
             <img id="logo" src="SVGs/logo.svg" alt="Company logo.">
             <div id="nav-links">
-                <a class="nav-link" href="#about">about.</a>
-                <a class="nav-link" href="#testimonials">testes.</a>
-                <a class="nav-link" href="#buy">buy.</a>
+                <a class="nav-link" href="#about"><img src="SVGs/about.svg" alt="about link icon"></a>
+                <a class="nav-link" href="#testimonials"><img src="SVGs/testimonials.svg" alt="testimonials link icon"></a>
+                <a class="nav-link" href="#buy"><img src="SVGs/buy-yours.svg" alt="buy yours link icon"></a>
             </div>
         </section>
     </header>
@@ -199,11 +199,15 @@
             </div>
         </section>
         <!-- Buy Yours (END) -->
+
+        <!--Disclaimer (START)-->
         <div id="disclaimer-grid">
             <div id="disclaimer-body">
                 <p>As these machines are built-to-order, expect at least two weeks between the moment you place your order to the moment it shows up at your front door.</p>
             </div>
         </div>
+        <!--Disclaimer (START)-->
+        
     </main>
 
     <!-- Footer (START) -->
