overflow-x, selector/heading name changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="nav-links">
                 <a class="nav-link" href="#about"><img src="SVGs/about.svg" alt="about link icon"></a>
                 <a class="nav-link" href="#testimonials"><img src="SVGs/testimonials.svg" alt="testimonials link icon"></a>
-                <a class="nav-link" href="#buy"><img src="SVGs/buy-yours.svg" alt="buy yours link icon"></a>
+                <a class="nav-link" href="#builds"><img src="SVGs/builds.svg" alt="builds link icon"></a>
             </div>
         </section>
     </header>
@@ -65,7 +65,7 @@
                         <img class="profile-icon" src="SVGs/avatar.svg" alt="Avatar icon.">
                         <h3 class="profile-heading">Ron</h3>
                     </div>
-                    <p>What a great buy! I could tell from the moment I placed my order that Alex has a passion for building these computers.</p>
+                    <p>What a great builds! I could tell from the moment I placed my order that Alex has a passion for building these computers.</p>
                     <div class="divider"></div>
                 </div>
                 <div class="body" id="jeof">
@@ -80,14 +80,14 @@
         </section>
         <!-- Testimonials (END) -->
 
-        <!-- Buy Yours (START) -->
-        <section id="buy">
-            <h2 class="heading">buy yours</h2>
-            <div id="buy-grid">
+        <!-- Builds (START) -->
+        <section id="builds">
+            <h2 class="heading">builds</h2>
+            <div id="builds-grid">
                 <div class="body" id="aqua">
-                    <h3 class="buy-grid-heading">Aqua</h3>
-                    <h3 class="buy-grid-subheading">Tier 4 - $600+</h3>
-                    <img class="buy-icons" src="SVGs/aqua-img.svg" alt="Aqua PC icon.">
+                    <h3 class="builds-grid-heading">Aqua</h3>
+                    <h3 class="builds-grid-subheading">Tier 4 - $600+</h3>
+                    <img class="builds-icons" src="SVGs/aqua-img.svg" alt="Aqua PC icon.">
                     <div class="specs">
                         <h3 class="specs-heading">Specs.</h3>
                         <div class="specs-body">
@@ -113,9 +113,9 @@
                     <div class="divider"></div>
                 </div>
                 <div class="body" id="terra">
-                    <h3 class="buy-grid-heading">Terra</h3>
-                    <h3 class="buy-grid-subheading">Tier 3 - $900+</h3>
-                    <img class="buy-icons" src="SVGs/terra-img.svg" alt="Terra PC icon.">
+                    <h3 class="builds-grid-heading">Terra</h3>
+                    <h3 class="builds-grid-subheading">Tier 3 - $900+</h3>
+                    <img class="builds-icons" src="SVGs/terra-img.svg" alt="Terra PC icon.">
                     <div class="specs">
                         <h3 class="specs-heading">Specs.</h3>
                         <div class="specs-body">
@@ -141,9 +141,9 @@
                     <div class="divider"></div>
                 </div>
                 <div class="body" id="fuoco">
-                    <h3 class="buy-grid-heading">Fuoco</h3>
-                    <h3 class="buy-grid-subheading">Tier 2 - $1,600+</h3>
-                    <img class="buy-icons" src="SVGs/fuoco-img.svg" alt="Fuoco PC icon.">
+                    <h3 class="builds-grid-heading">Fuoco</h3>
+                    <h3 class="builds-grid-subheading">Tier 2 - $1,600+</h3>
+                    <img class="builds-icons" src="SVGs/fuoco-img.svg" alt="Fuoco PC icon.">
                     <div class="specs">
                         <h3 class="specs-heading">Specs.</h3>
                         <div class="specs-body">
@@ -169,9 +169,9 @@
                     <div class="divider"></div>
                 </div>
                 <div class="body" id="glassia">
-                    <h3 class="buy-grid-heading">Glassia</h3>
-                    <h3 class="buy-grid-subheading">Tier 1 - $2,000+</h3>
-                    <img class="buy-icons" src="SVGs/glassia-img.svg" alt="Glassia PC icon.">
+                    <h3 class="builds-grid-heading">Glassia</h3>
+                    <h3 class="builds-grid-subheading">Tier 1 - $2,000+</h3>
+                    <img class="builds-icons" src="SVGs/glassia-img.svg" alt="Glassia PC icon.">
                     <div class="specs">
                         <h3 class="specs-heading">Specs.</h3>
                         <div class="specs-body">
@@ -198,7 +198,7 @@
                 </div>
             </div>
         </section>
-        <!-- Buy Yours (END) -->
+        <!-- Builds (END) -->
 
         <!--Disclaimer (START)-->
         <div id="disclaimer-grid">
@@ -218,7 +218,7 @@
                 <div id="footer-links">
                     <a href="#about">about.</a>
                     <a href="#testimonials">testes.</a>
-                    <a href="#buy">buy.</a>
+                    <a href="#builds">builds.</a>
                 </div>
             </div>
             <img id="footer-logo" src="SVGs/logo.svg" alt="SFFPC BLDR. logo.">
