--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <!-- Header (START) -->
     <header id="header">
-        <section id="content">
+        <section id="content-header">
             <img id="logo" src="SVGs/logo.svg" alt="Company logo.">
-            <div id="nav-links">
+            <div class="nav-links">
                 <a class="nav-link" href="#about"><img src="SVGs/about.svg" alt="about link icon"></a>
                 <a class="nav-link" href="#testimonials"><img src="SVGs/testimonials.svg" alt="testimonials link icon"></a>
                 <a class="nav-link" href="#builds"><img src="SVGs/builds.svg" alt="builds link icon"></a>
@@ -212,16 +212,10 @@
 
     <!-- Footer (START) -->
     <footer>
-        <div id="footer">
-            <div id="footer-left">
-                <h3>Quick Links:</h3>
-                <div id="footer-links">
-                    <a href="#about">about.</a>
-                    <a href="#testimonials">testes.</a>
-                    <a href="#builds">builds.</a>
-                </div>
-            </div>
-            <img id="footer-logo" src="SVGs/logo.svg" alt="SFFPC BLDR. logo.">
+        <div id="content-footer">
+            <a class="nav-link" href="#about"><img src="SVGs/about.svg" alt="about link icon"></a>
+            <a class="nav-link" href="#testimonials"><img src="SVGs/testimonials.svg" alt="testimonials link icon"></a>
+            <a class="nav-link" href="#builds"><img src="SVGs/builds.svg" alt="builds link icon"></a>
         </div>
     </footer>
     <!-- Footer (END) -->
