--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
                     <div class="specs">
                         <h3 class="specs-heading">Specs.</h3>
                         <div class="specs-body">
-                            <div class="specs-line">
+                            <div class="specs-line cpu">
                                 <span class="spec-heading">CPU:</span>
                                 <p>Intel Core i3-13100F</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line ram">
                                 <span class="spec-heading">RAM:</span>
                                 <p>16GB DDR4</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line storage">
                                 <span class="spec-heading">Storage:</span>
                                 <p>500 GB NVME SSD</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line gpu">
                                 <span class="spec-heading">GPU:</span>
                                 <p>Radeon RX 6600 8GB</p>
                             </div>
@@ -119,19 +119,19 @@
                     <div class="specs">
                         <h3 class="specs-heading">Specs.</h3>
                         <div class="specs-body">
-                            <div class="specs-line">
+                            <div class="specs-line cpu">
                                 <span class="spec-heading">CPU:</span>
                                 <p>AMD Ryzen 5 5600X</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line ram">
                                 <span class="spec-heading">RAM:</span>
                                 <p>16GB DDR4</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line storage">
                                 <span class="spec-heading">Storage:</span>
                                 <p>1 TB NVME SSD</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line gpu">
                                 <span class="spec-heading">GPU:</span>
                                 <p>Radeon RX 6700 XT 12GB</p>
                             </div>
@@ -147,19 +147,19 @@
                     <div class="specs">
                         <h3 class="specs-heading">Specs.</h3>
                         <div class="specs-body">
-                            <div class="specs-line">
+                            <div class="specs-line cpu">
                                 <span class="spec-heading">CPU:</span>
                                 <p>AMD Ryzen 7 3800X3D</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line ram">
                                 <span class="spec-heading">RAM:</span>
                                 <p>32GB DDR4</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line storage">
                                 <span class="spec-heading">Storage:</span>
                                 <p>2 TB NVME SSD</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line gpu">
                                 <span class="spec-heading">GPU:</span>
                                 <p>Radeon RX 7900 XT 20GB</p>
                             </div>
@@ -175,19 +175,19 @@
                     <div class="specs">
                         <h3 class="specs-heading">Specs.</h3>
                         <div class="specs-body">
-                            <div class="specs-line">
+                            <div class="specs-line cpu">
                                 <span class="spec-heading">CPU:</span>
                                 <p>Intel Core i7-13700K</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line ram">
                                 <span class="spec-heading">RAM:</span>
                                 <p>32GB DDR4</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line storage">
                                 <span class="spec-heading">Storage:</span>
                                 <p>2 TB NVME SSD</p>
                             </div>
-                            <div class="specs-line">
+                            <div class="specs-line gpu">
                                 <span class="spec-heading">GPU:</span>
                                 <p>GeForce RTX 4070 Ti 12GB</p>
                             </div>
