Animated #main-image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header (END) -->
     
     <div id="nav-bounds">
-    <img id="main-image" src="SVGs/PC.svg" alt="Image of a SFFPC.">
+    <div id="main-image"></div>
 
         <main>
             <!-- About (START) -->
