New icons for #builds-grid

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="body" id="aqua">
                         <h3 class="builds-grid-heading">Aqua</h3>
                         <h3 class="builds-grid-subheading">Tier 4 - $600+</h3>
-                        <img class="builds-icons" src="SVGs/aqua-img.svg" alt="Aqua PC icon.">
+                        <img class="builds-icons" src="SVGs/PC_Aqua.svg" alt="Aqua PC icon.">
                         <div class="specs">
                             <h3 class="specs-heading">Specs.</h3>
                             <div class="specs-body">
@@ -113,7 +113,7 @@
                     <div class="body" id="terra">
                         <h3 class="builds-grid-heading">Terra</h3>
                         <h3 class="builds-grid-subheading">Tier 3 - $900+</h3>
-                        <img class="builds-icons" src="SVGs/terra-img.svg" alt="Terra PC icon.">
+                        <img class="builds-icons" src="SVGs/PC_Terra.svg" alt="Terra PC icon.">
                         <div class="specs">
                             <h3 class="specs-heading">Specs.</h3>
                             <div class="specs-body">
@@ -141,7 +141,7 @@
                     <div class="body" id="fuoco">
                         <h3 class="builds-grid-heading">Fuoco</h3>
                         <h3 class="builds-grid-subheading">Tier 2 - $1,600+</h3>
-                        <img class="builds-icons" src="SVGs/fuoco-img.svg" alt="Fuoco PC icon.">
+                        <img class="builds-icons" src="SVGs/PC_Fuoco.svg" alt="Fuoco PC icon.">
                         <div class="specs">
                             <h3 class="specs-heading">Specs.</h3>
                             <div class="specs-body">
@@ -169,7 +169,7 @@
                     <div class="body" id="glassia">
                         <h3 class="builds-grid-heading">Glassia</h3>
                         <h3 class="builds-grid-subheading">Tier 1 - $2,000+</h3>
-                        <img class="builds-icons" src="SVGs/glassia-img.svg" alt="Glassia PC icon.">
+                        <img class="builds-icons" src="SVGs/PC_Glassia.svg" alt="Glassia PC icon.">
                         <div class="specs">
                             <h3 class="specs-heading">Specs.</h3>
                             <div class="specs-body">
