--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <script src="script.js"></script>
     <!-- Header (START) -->
     <header id="header">
         <section id="content-header">
