--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <section id="content-header">
             <img id="logo" src="SVGs/logo.svg" alt="Company logo.">
             <div id="header-buttons">
-                <a class="buttons" id="button_profile" href=""><img src="SVGs/profile.svg" alt="profile icon"></a>
-                <a class="buttons" id="button_settings" href=""><img src="SVGs/settings.svg" alt="settings icon"></a>
+                <a class="buttons heading-color" id="button_profile" href=""></a>
+                <a class="buttons heading-color" id="button_settings" href=""></a>
             </div>
         </section>
     </header>
@@ -87,7 +87,7 @@
                             <div class="specs-body">
                                 <div class="specs-line cpu">
                                     <span class="spec-heading">CPU:</span>
-                                    <p>Intel Core i3-13100F</p>
+                                    <p><span class="aqua hide-text">Intel Core </span>i3-13100F</p>
                                 </div>
                                 <div class="specs-line ram">
                                     <span class="spec-heading">RAM:</span>
@@ -99,7 +99,7 @@
                                 </div>
                                 <div class="specs-line gpu">
                                     <span class="spec-heading">GPU:</span>
-                                    <p>Radeon RX 6600 8GB</p>
+                                    <p><span class="aqua hide-text">Radeon </span>RX 6600 8GB</p>
                                 </div>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                             <div class="specs-body">
                                 <div class="specs-line cpu">
                                     <span class="spec-heading">CPU:</span>
-                                    <p>AMD Ryzen 5 5600X</p>
+                                    <p><span class="terra hide-text">AMD </span>Ryzen 5 5600X</p>
                                 </div>
                                 <div class="specs-line ram">
                                     <span class="spec-heading">RAM:</span>
@@ -126,7 +126,7 @@
                                 </div>
                                 <div class="specs-line gpu">
                                     <span class="spec-heading">GPU:</span>
-                                    <p>Radeon RX 6700 XT 12GB</p>
+                                    <p><span class="terra hide-text">Radeon </span>RX 6700 XT 12GB</p>
                                 </div>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                             <div class="specs-body">
                                 <div class="specs-line cpu">
                                     <span class="spec-heading">CPU:</span>
-                                    <p>AMD Ryzen 7 3800X3D</p>
+                                    <p><span class="fuoco hide-text">AMD </span>Ryzen 7 3800X3D</p>
                                 </div>
                                 <div class="specs-line ram">
                                     <span class="spec-heading">RAM:</span>
@@ -153,7 +153,7 @@
                                 </div>
                                 <div class="specs-line gpu">
                                     <span class="spec-heading">GPU:</span>
-                                    <p>Radeon RX 7900 XT 20GB</p>
+                                    <p><span class="fuoco hide-text">Radeon </span>RX 7900 XT 20GB</p>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                             <div class="specs-body">
                                 <div class="specs-line cpu">
                                     <span class="spec-heading">CPU:</span>
-                                    <p>Intel Core i7-13700K</p>
+                                    <p><span class="glassia hide-text">Intel Core </span>i7-13700K</p>
                                 </div>
                                 <div class="specs-line ram">
                                     <span class="spec-heading">RAM:</span>
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="specs-line gpu">
                                     <span class="spec-heading">GPU:</span>
-                                    <p>GeForce RTX 4070 Ti 12GB</p>
+                                    <p><span class="glassia hide-text">GeForce </span>RTX 4070 Ti 12GB</p>
                                 </div>
                             </div>
                         </div>
@@ -208,9 +208,9 @@
         
         <!-- Navigation (START)-->
         <div id="nav-buttons">
-            <a class="buttons" id="button_about" href="#about"><img src="SVGs/about.svg" alt="about link icon"></a>
-            <a class="buttons" id="button_testimonials" href="#testimonials"><img src="SVGs/testimonials_alt.svg" alt="testimonials link icon"></a>
-            <a class="buttons" id="button_builds" href="#builds"><img src="SVGs/builds.svg" alt="builds link icon"></a>
+            <a class="buttons nav-color" id="button_about" href="#about"></a>
+            <a class="buttons nav-color" id="button_testimonials" href="#testimonials"></a>
+            <a class="buttons nav-color" id="button_builds" href="#builds"></a>
         </div>
         <!-- Navigation (END)-->
 
