--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class="specs-line storage">
                                     <span class="spec-heading">Storage:</span>
-                                    <p>500 GB NVME SSD</p>
+                                    <p><span class="aqua hide-text">NVME SSD - </span>500 GB</p>
                                 </div>
                                 <div class="specs-line gpu">
                                     <span class="spec-heading">GPU:</span>
@@ -122,7 +122,7 @@
                                 </div>
                                 <div class="specs-line storage">
                                     <span class="spec-heading">Storage:</span>
-                                    <p>1 TB NVME SSD</p>
+                                    <p><span class="terra hide-text">NVME SSD - </span>1 TB</p>
                                 </div>
                                 <div class="specs-line gpu">
                                     <span class="spec-heading">GPU:</span>
@@ -149,7 +149,7 @@
                                 </div>
                                 <div class="specs-line storage">
                                     <span class="spec-heading">Storage:</span>
-                                    <p>2 TB NVME SSD</p>
+                                    <p><span class="fuoco hide-text">NVME SSD - </span>2 TB</p>
                                 </div>
                                 <div class="specs-line gpu">
                                     <span class="spec-heading">GPU:</span>
@@ -176,7 +176,7 @@
                                 </div>
                                 <div class="specs-line storage">
                                     <span class="spec-heading">Storage:</span>
-                                    <p>2 TB NVME SSD</p>
+                                    <p><span class="glassia hide-text">NVME SSD - </span>2 TB</p>
                                 </div>
                                 <div class="specs-line gpu">
                                     <span class="spec-heading">GPU:</span>
