--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
 
       <!-- Navigation (START)-->
       <div id="nav-buttons">
-        <a class="buttons nav-button-color" id="button_about" href="#about"></a>
+        <a class="buttons nav-button-color" id="button_about" href="#about">
+        </a>
         <a
           class="buttons nav-button-color"
           id="button_testimonials"
